--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav id="navbar">
         <h2 id="sitename">DojoWeather</h2>
         <div>
-            <ul>
+            <ul onclick="alert('Loading weather report...')">
                 <li>Burbank</li>
                 <li>Chicago</li>
                 <li>Dallas</li>
@@ -25,9 +25,9 @@
         <h2 id="city">San Jose</h2>
         <div class="temp">
             <p>show temperature in</p>
-            <select name="measure" id="temperature">
-                <option value=""><span>&#176;</span>C</option>
-                <option value=""><span>&#176;</span>F</option>
+            <select name="measure" id="temperature" onchange="farOrCel(this)">
+                <option value="celcius"><span>&#176;</span>C</option>
+                <option value="farenheit"><span>&#176;</span>F</option>
             </select>
         </div>
     </div>
@@ -37,8 +37,8 @@
             <img src="./assets/some_rain.png" alt="cloud with rain">
             <p>some rain</p>
             <div class="high-low">
-                <h3 id="high">24<span>&#176;</span></h3>
-                <h3 id="low">18<span>&#176;</span></h3>
+                <h3 id="high" class="celcius">24<span>&#176;</span></h3>
+                <h3 id="low" class="celcius">18<span>&#176;</span></h3>
             </div>
         </div>
         <div class="daycontains">
@@ -46,8 +46,8 @@
             <img src="./assets/some_sun.png" alt="sun">
             <p>some sun</p>
             <div class="high-low">
-                <h3 id="high">27<span>&#176;</span></h3>
-                <h3 id="low">19<span>&#176;</span></h3>
+                <h3 id="high" class="celcius">27<span>&#176;</span></h3>
+                <h3 id="low" class="celcius">19<span>&#176;</span></h3>
             </div>
         </div>
         <div class="daycontains">
@@ -55,8 +55,8 @@
             <img src="./assets/some_clouds.png" alt="cloud">
             <p>some clouds</p>
             <div class="high-low">
-                <h3 id="high">21<span>&#176;</span></h3>
-                <h3 id="low">16<span>&#176;</span></h3>
+                <h3 id="high" class="celcius">21<span>&#176;</span></h3>
+                <h3 id="low" class="celcius">16<span>&#176;</span></h3>
             </div>
         </div>
         <div class="daycontains">
@@ -64,10 +64,18 @@
             <img src="./assets/some_sun.png" alt="sun">
             <p>some sun</p>
             <div class="high-low">
-                <h3 id="high">26<span>&#176;</span></h3>
-                <h3 id="low">21<span>&#176;</span></h3>
+                <h3 id="high" class="celcius">26<span>&#176;</span></h3>
+                <h3 id="low" class="celcius">21<span>&#176;</span></h3>
             </div>
         </div>
+    </div>
+    <div id="alert">
+        <img src="./assets/cookie.png" alt="cookie">
+        <div class="cookieinfo">
+            <h2>Stop! Cookie time</h2>
+            <p>We use cookies (sadly not the edible ones) to personalize content and ads, to provide social media features and to analyse our traffic. <a href="">Read more...</a></p>
+        </div>
+        <button onclick="showAlert()">I Accept</button>
     </div>
     <script src="script.js"></script>
 </body>
