--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <h2 id="city">San Jose</h2>
         <div class="temp">
             <p>show temperature in</p>
-            <select name="measure" id="temperature" onchange="farOrCel(this)">
-                <option value="celcius"><span>&#176;</span>C</option>
-                <option value="farenheit"><span>&#176;</span>F</option>
+            <select class="temperature" onchange="farOrCel(this)">
+                <option value="celcius">°C</option>
+                <option value="farenheit">°F</option>
             </select>
         </div>
     </div>
@@ -37,8 +37,8 @@
             <img src="./assets/some_rain.png" alt="cloud with rain">
             <p>some rain</p>
             <div class="high-low">
-                <h3 id="high" class="celcius">24<span>&#176;</span></h3>
-                <h3 id="low" class="celcius">18<span>&#176;</span></h3>
+                <h3 id="high" class="temp1">24°</h3>
+                <h3 id="low" class="temp2">18°</h3>
             </div>
         </div>
         <div class="daycontains">
@@ -46,8 +46,8 @@
             <img src="./assets/some_sun.png" alt="sun">
             <p>some sun</p>
             <div class="high-low">
-                <h3 id="high" class="celcius">27<span>&#176;</span></h3>
-                <h3 id="low" class="celcius">19<span>&#176;</span></h3>
+                <h3 id="high" class="temp3">27°</h3>
+                <h3 id="low" class="temp4">19°</h3>
             </div>
         </div>
         <div class="daycontains">
@@ -55,8 +55,8 @@
             <img src="./assets/some_clouds.png" alt="cloud">
             <p>some clouds</p>
             <div class="high-low">
-                <h3 id="high" class="celcius">21<span>&#176;</span></h3>
-                <h3 id="low" class="celcius">16<span>&#176;</span></h3>
+                <h3 id="high" class="temp5">21<span>&#176;</span></h3>
+                <h3 id="low" class="temp6">16<span>&#176;</span></h3>
             </div>
         </div>
         <div class="daycontains">
@@ -64,8 +64,8 @@
             <img src="./assets/some_sun.png" alt="sun">
             <p>some sun</p>
             <div class="high-low">
-                <h3 id="high" class="celcius">26<span>&#176;</span></h3>
-                <h3 id="low" class="celcius">21<span>&#176;</span></h3>
+                <h3 id="high" class="temp7">26<span>&#176;</span></h3>
+                <h3 id="low" class="temp8">21<span>&#176;</span></h3>
             </div>
         </div>
     </div>
